# rust-aoc

./: Cargo.toml  README.md
benches/: aoc2015.rs
src/: lib.rs  main.rs  utils.rs
src/aoc2015/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs
