[package]
name = "rust-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
num_cpus = "1.13"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc2015"
harness = false
